# kumade

./: .gitignore  Kumadefile.py  LICENSE  README.md  example_for_import.py  pyproject.toml
kumade/: __init__.py  builder.py  cli.py  config.py  decorator.py  loader.py  manager.py  runner.py  task.py  utility.py
kumade/concurrent/: printer.py  runner.py
tests/: test_clean_task_builder.py  test_config.py  test_config_registry.py  test_decorator.py  test_file_task_builder.py  test_kumadefile_loader.py  test_task.py  test_task_builder.py  test_task_manager.py  test_task_runner.py  test_utility.py
tests/assets/: Kumadefile.py  concurrent.py
tests/concurrent/: test_concurrent_task_runner.py  test_print_client.py  test_print_server.py  test_task_worker.py
